--- a/index.html
+++ b/index.html
@@ -17,6 +17,20 @@
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
+            <a href="interactive-card-details-form-main/index.html" target="_blank" class="item">
+                <img src="img/interactive-card.png" alt="Multi-Step Subscription Form">
+                <div class="item-inner">
+                    <h3>Interactive card</h3>
+                    <p>Try to fill inputs and see card details change in real time!</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>SASS/SCSS</li>
+                        <li>Typescript</li>
+                        <li>Form Validation</li>
+                        <li>Responsive Layout</li>
+                    </ul>
+                </div>
+            </a>
             <a href="https://olha-leskiv.github.io/multi-step-form/" target="_blank" class="item">
                 <img src="img/multi-step-form.png" alt="Multi-Step Subscription Form">
                 <div class="item-inner">
