added areti health. Added Commercial section

--- a/index.html
+++ b/index.html
@@ -16,6 +16,23 @@
             <p>Contact me: hello.leskiv@gmail.com</p>
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
+        <div class="section-header"><h2>Commercial projects</h2></div>
+        <div class="items-container">
+            <a href="https://www.aretihealth.com/" target="_blank" class="item">
+                <img src="img/areti-health.png" alt="Multi-Step Subscription Form">
+                <div class="item-inner">
+                    <h3>Areti Health Landing Page</h3>
+                    <p>I designed and developed a modern website for a healthcare product that utilizes generative AI to automate patient communications.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Responsive Layout</li>
+                        <li>CSS Animations</li>
+                        <li>JavaScript</li>
+                    </ul>
+                </div>
+            </a>
+        </div>
+        <div class="section-header"><h2>Pet projects</h2></div>
         <div class="items-container">
             <a href="interactive-card-details-form-main/index.html" target="_blank" class="item">
                 <img src="img/interactive-card.png" alt="Multi-Step Subscription Form">
