added: pomodoro app

--- a/index.html
+++ b/index.html
@@ -34,6 +34,21 @@
         </div>
         <div class="section-header"><h2>Pet projects</h2></div>
         <div class="items-container">
+            <a href="https://olha-leskiv.github.io/pomodoro-app/" target="_blank" class="item">
+                <img src="img/pomodoro.png" alt="Multi-Step Subscription Form">
+                <div class="item-inner">
+                    <h3>Pomodoro App</h3>
+                    <p>Try to fill inputs and see card details change in real time!</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>SASS/SCSS</li>
+                        <li>Typescript</li>
+                        <li>Webpack</li>
+                        <li>React</li>
+                        <li>Responsive Layout</li>
+                    </ul>
+                </div>
+            </a>
             <a href="interactive-card-details-form-main/index.html" target="_blank" class="item">
                 <img src="img/interactive-card.png" alt="Multi-Step Subscription Form">
                 <div class="item-inner">
