--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <title>Menu of contents</title>
 </head>
 <body>
+    <div class="bg">
+        <!-- <nav>Olha Leskiv</nav> -->
     <div class="container">
         <div class="hero-container">
             <h1>Projects</h1>
-            <p>Contact me: hello.leskiv@gmail.com</p>
+            <p>Contact me: <a href="mailto:'hello.leskiv@gmail.com'">hello.leskiv@gmail.com</a></p>
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="section-header"><h2>Commercial projects</h2></div>
@@ -394,8 +396,7 @@
                     </ul>
                 </div>
             </a>
-
-
+        </div>
         </div>
     </div>
 </body>
