--- a/light-dark-mode/index.html
+++ b/light-dark-mode/index.html
@@ -1,77 +1,96 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Light Dark Mode</title>
-</head>
-<body>
-
-        <div class="theme-switch-wrapper">
-            <span id="toggle-icon">
-                <span class="toggle-text">Light Mode</span>
-                <i class="fa-solid fa-sun"></i>
-            </span>
-            <label class="theme-switch">
-                <input type="checkbox">
-                <div class="slider round"></div>
-            </label>
+  </head>
+  <body>
+    <div class="theme-switch-wrapper">
+      <span id="toggle-icon">
+        <span class="toggle-text">Light Mode</span>
+        <i class="fa-solid fa-sun"></i>
+      </span>
+      <label class="theme-switch">
+        <input type="checkbox" />
+        <div class="slider round"></div>
+      </label>
+    </div>
+    <nav id="nav">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contacts</a>
+    </nav>
+    <section id="home">
+      <div class="title-group">
+        <h1>Try to change mode</h1>
+        <h2>Welcome to the website</h2>
+      </div>
+    </section>
+    <section id="about">
+      <h1>Undraw Illustrations</h1>
+      <div class="about-container">
+        <div class="image-container">
+          <h2>Web Innovation</h2>
+          <img
+            src="img/undraw_proud_coder_light.svg"
+            alt="Proud Coder"
+            id="image1"
+          />
         </div>
-        <nav id="nav">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contacts</a>
-        </nav>
-        <section id="home">
-            <div class="title-group">
-                <h1>Try to change mode</h1>
-                <h2>Welcome to the website</h2>
-            </div>
-        </section>
-        <section id="about">
-            <h1>Undraw Illustrations</h1>
-            <div class="about-container">
-                <div class="image-container">
-                    <h2>Web Innovation</h2>
-                    <img src="img/undraw_proud_coder_light.svg" alt="Proud Coder" id="image1">
-                </div>
-                <div class="image-container">
-                    <h2>Problem Solving</h2>
-                    <img src="img/undraw_feeling_proud_light.svg" alt="Feeling Proud" id="image2">
-                </div>
-                <div class="image-container">
-                    <h2>High Concept</h2>
-                    <img src="img/undraw_conceptual_idea_light.svg" alt="Conceptual Idea" id="image3">
-                </div>
-            </div>
-        </section>
-        <section id="projects">
-            <h1>Buttons</h1>
-            <div class="buttons">
-                <button class="primary">Primary</button>
-                <button class="secondary">Secondary</button>
-                <button class="primary" disabled>Disabled</button>
-                <button class="outline">Outline</button>
-                <button class="secondary">Alt Outline</button>
-                <button class="outline" disabled>Disabled</button>
-            </div>
-            <div class="text-box" id="text-box">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo ipsum reprehenderit quisquam tempora. Ullam quis error eum repudiandae deleniti iste delectus cumque, consequuntur ipsa, voluptatem animi, odio vel sit nam!</p>
-            </div>
-        </section>
-        <section id="contact">
-            <div class="social-icons">
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-twitter"></i>
-                <i class="fa-brands fa-slack"></i>
-                <i class="fa-brands fa-telegram"></i>
-                <i class="fa-brands fa-github"></i>
-            </div>
-        </section>
+        <div class="image-container">
+          <h2>Problem Solving</h2>
+          <img
+            src="img/undraw_feeling_proud_light.svg"
+            alt="Feeling Proud"
+            id="image2"
+          />
+        </div>
+        <div class="image-container">
+          <h2>High Concept</h2>
+          <img
+            src="img/undraw_conceptual_idea_light.svg"
+            alt="Conceptual Idea"
+            id="image3"
+          />
+        </div>
+      </div>
+    </section>
+    <section id="projects">
+      <h1>Buttons</h1>
+      <div class="buttons">
+        <button class="primary">Primary</button>
+        <button class="secondary">Secondary</button>
+        <button class="primary" disabled>Disabled</button>
+        <button class="outline">Outline</button>
+        <button class="secondary">Alt Outline</button>
+        <button class="outline" disabled>Disabled</button>
+      </div>
+      <div class="text-box" id="text-box">
+        <p>
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo ipsum
+          reprehenderit quisquam tempora. Ullam quis error eum repudiandae
+          deleniti iste delectus cumque, consequuntur ipsa, voluptatem animi,
+          odio vel sit nam!
+        </p>
+      </div>
+    </section>
+    <section id="contact">
+      <div class="social-icons">
+        <i class="fa-brands fa-youtube"></i>
+        <i class="fa-brands fa-twitter"></i>
+        <i class="fa-brands fa-slack"></i>
+        <i class="fa-brands fa-telegram"></i>
+        <i class="fa-brands fa-github"></i>
+      </div>
+    </section>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
