feat: added navbar

--- a/index.html
+++ b/index.html
@@ -19,23 +19,29 @@
   <body>
     <div class="bg">
       <!-- <nav>Olha Leskiv</nav> -->
+      <nav>
+        <p>OLHA LESKIV</p>
+        <ul>
+          <li>
+            <a target="_blank" href="-- assets/CV Olha Leskiv (Eng).pdf"
+              >Download CV</a
+            >
+          </li>
+          <li>
+            <a href="mailto:'hello.leskiv@gmail.com'">hello.leskiv@gmail.com</a>
+          </li>
+          <li>
+            <a
+              target="_blank"
+              href="https://olha-leskiv.github.io/design-portfolio/"
+              >Design Portfolio</a
+            >
+          </li>
+        </ul>
+      </nav>
       <div class="container">
         <div class="hero-container">
           <h1>Projects</h1>
-          <p>
-            Contact me:
-            <a href="mailto:'hello.leskiv@gmail.com'">hello.leskiv@gmail.com</a>
-          </p>
-          <p>
-            Also, you may be interested in my
-            <span
-              ><a
-                target="_blank"
-                href="https://olha-leskiv.github.io/design-portfolio/"
-                >Design portfolio</a
-              ></span
-            >
-          </p>
         </div>
         <div class="section-header"><h2>Commercial projects</h2></div>
         <div class="items-container">
@@ -71,7 +77,8 @@
             <div class="item-inner">
               <h3>Pomodoro App</h3>
               <p>
-                Try to fill inputs and see card details change in real time!
+                Boost productivity with Pomodoro app, offering focused work
+                sessions and timed breaks for efficient task management
               </p>
               <ul class="tags">
                 <li>HTML/CSS</li>
@@ -117,7 +124,7 @@
             />
             <div class="item-inner">
               <h3>Multi-Step Subscription Form</h3>
-              <p>Tip calculator app</p>
+              <p>Possible demo for multistep form to setup subscription.</p>
               <ul class="tags">
                 <li>HTML/CSS</li>
                 <li>SASS/SCSS</li>
