fixed image name

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         <a href="https://drive.google.com/file/d/1BMF36KB5VC3beHDqXv0iYlFRiZumrjd5/view?usp=sharing" target="_blank"
           class="item">
-          <img src="img/alphahero.png" alt="AlphaHero Tickerpage" />
+          <img src="img/Alphahero.png" alt="AlphaHero Tickerpage" />
           <div class="item-inner">
             <h3>AlphaHero</h3>
             <p>
